--- a/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
@@ -621,7 +621,7 @@
              <library id="jersey-core-1.9.jar"/>
              <library id="log4j-1.2.17.jar"/>
              <library id="jetty-util-emr500-latest"/>
-             <!--<library id="emr-metrics-client-emr500-latest"/>-->
+             <library id="emr-metrics-client-emr500-latest"/>
              <library id="htrace-core-3.1.0-incubating.jar"/>
         </libraryNeededGroup>
         
@@ -673,8 +673,7 @@
              <library id="httpcore-4.3.2.jar"/>
              <library id="httpclient-4.3.4.jar"/>
              <library id="jetty-util-emr500-latest"/>
-             <!--<library id="emr-metrics-client-emr500-latest"/>-->
-             <!--<library id="snappy-java-1.1.0.1.jar"/>-->
+             <library id="emr-metrics-client-emr500-latest"/>
              <library id="htrace-core-3.1.0-incubating.jar"/>
              <library id="guava-11.0.2.jar"/>
              <library id="jline-1.0.jar"/>
@@ -682,8 +681,7 @@
              <library id="joda-time-2.9.3.jar"/>
              <library id="automaton-1.11-8.jar"/>
              <library id="servlet-api-2.5.jar"/>
-             <!--<library id="piggybank-emr500-latest"/>
-             <library id="commons-io-2.4.jar"/> -->
+             <library id="commons-io-2.4.jar"/>
         </libraryNeededGroup>
         
         <!-- Pig Parquet group -->
@@ -852,37 +850,8 @@
             <library id="avro-mapred-emr500-latest"/>
         </libraryNeededGroup>
                 
-        <!-- Spark group -->
-       <!-- <libraryNeededGroup
-                description="The latest Spark libraries for EMR 5.0.0"
-                id="SPARK-LIB-EMR_5_0_0_LATEST_O"
-                name="SPARK-LIB-EMR_5_0_0_LATEST_O">
-             <library id="talend-spark-assembly-emr500-latest"/>
-             <library id="hadoop-common-emr500-latest"/>
-             <library id="hadoop-hdfs-emr500-latest"/>
-             <library id="hadoop-auth-emr500-latest"/>
-             <library id="hadoop-mapreduce-client-common-emr500-latest"/>
-             <library id="hadoop-mapreduce-client-core-emr500-latest"/>
-             <library id="hadoop-mapreduce-client-jobclient-emr500-latest"/>
-             <library id="hadoop-yarn-api-emr500-latest"/>
-             <library id="hadoop-yarn-client-emr500-latest"/>
-             <library id="hadoop-yarn-common-emr500-latest"/>
-             <library id="commons-configuration-1.6.jar"/>
-             <library id="commons-lang-2.6.jar"/>
-             <library id="commons-logging-1.1.3.jar"/>
-             <library id="commons-cli-1.2.jar"/>
-             <library id="commons-codec-1.10.jar"/>
-             <library id="commons-collections-3.2.2.jar"/>
-             <library id="guava-14.0.1.jar"/>
-             <library id="protobuf-java-2.5.0.jar"/>
-             <library id="slf4j-api-1.7.16.jar"/>
-             <library id="slf4j-log4j12-1.7.16.jar"/>
-             <library id="log4j-1.2.17.jar"/>
-              <library id="htrace-core-3.1.0-incubating.jar"/>
-        </libraryNeededGroup>
-        -->
-        
-          <libraryNeededGroup
+        <!-- Spark2 group -->
+         <libraryNeededGroup
                 description="The latest Spark libraries for EMR 5.0.0"
                 id="SPARK2-LIB-EMR_5_0_0_LATEST"
                 name="SPARK2-LIB-EMR_5_0_0_LATEST">             
