Fix the MapR 5.2 libraries pom.xml

--- a/main/plugins/org.talend.hadoop.distribution.mapr520.jars/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr520.jars/pom.xml
@@ -35,7 +35,7 @@
               <artifactItems>
                 <artifactItem>
                   <groupId>${talend.groupid}</groupId>
-                  <artifactId>datanucleus-api-jdo-4.2.1/artifactId>
+                  <artifactId>datanucleus-api-jdo-4.2.1</artifactId>
                   <version>${talend.version.620}</version>
                 </artifactItem>
                 <artifactItem>
