[TBD-4086] Add missing 'off' option for MapR Streams compression

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMapRStreamsCreateStream/tMapRStreamsCreateStream_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMapRStreamsCreateStream/tMapRStreamsCreateStream_messages.properties
@@ -35,6 +35,7 @@ STREAM_DEFAULT_PARTITIONS.NAME=Default number of partitions
 STREAM_TOPIC_PERMS.NAME=Topicperms
 STREAM_TIME_TO_LIVE.NAME=Messages time to live (s)
 STREAM_COMPRESSION.NAME=Compression
+STREAM_COMPRESSION.ITEM.OFF=off
 STREAM_COMPRESSION.ITEM.LZ4=lz4
 STREAM_COMPRESSION.ITEM.LZF=lzf
 STREAM_COMPRESSION.ITEM.ZLIB=zlib
