[TBD-4068] Support Kafka 0.10.0 in DI

--- a/main/plugins/org.talend.designer.components.bigdata/components/tKafkaConnection/tKafkaConnection_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tKafkaConnection/tKafkaConnection_messages.properties
@@ -4,6 +4,7 @@ LONG_NAME=Specify a connection to Kafka
 KAFKA_VERSION.NAME=Version
 KAFKA_VERSION.ITEM.KAFKA_0_8_2_0=Kafka 0.8.2.0
 KAFKA_VERSION.ITEM.KAFKA_0_9_0_1=Kafka 0.9.0.1
+KAFKA_VERSION.ITEM.KAFKA_0_10_0_1=Kafka 0.10.0.1
 ZOOKEEPER_CONNECT.NAME=Zookeeper quorum list
 BROKER_LIST.NAME=Broker list
 
