--- a/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
@@ -335,6 +335,10 @@
 <libraryNeeded context="plugin:org.talend.hadoop.distribution.emr500" id="chill-java-0.8.0.jar" name="chill-java-0.8.0.jar" mvn_uri="mvn:org.talend.libraries/chill-java-0.8.0/6.0.0"/>
 <libraryNeeded context="plugin:org.talend.hadoop.distribution.emr500" id="jersey-client-2.22.2.jar" name="jersey-client-2.22.2.jar" mvn_uri="mvn:org.talend.libraries/jersey-client-2.22.2/6.0.0"/>
 <libraryNeeded context="plugin:org.talend.hadoop.distribution.emr500" id="commons-lang3-3.3.2.jar" name="commons-lang3-3.3.2.jar" mvn_uri="mvn:org.talend.libraries/commons-lang3-3.3.2/6.0.0"/>
+
+<libraryNeeded context="plugin:org.talend.hadoop.distribution.emr500" id="commons-lang3-3.4.jar" name="commons-lang3-3.4.jar" mvn_uri="mvn:org.talend.libraries/commons-lang3-3.4/6.2.0"/>
+
+
 <libraryNeeded context="plugin:org.talend.hadoop.distribution.emr500" id="xmlenc-0.52.jar" name="xmlenc-0.52.jar" mvn_uri="mvn:org.talend.libraries/xmlenc-0.52/6.0.0"/>
 <libraryNeeded context="plugin:org.talend.hadoop.distribution.emr500" id="scala-reflect-2.11.8.jar" name="scala-reflect-2.11.8.jar" mvn_uri="mvn:org.talend.libraries/scala-reflect-2.11.8/6.0.0"/>
 <libraryNeeded context="plugin:org.talend.hadoop.distribution.emr500" id="metrics-core-3.1.2.jar" name="metrics-core-3.1.2.jar" mvn_uri="mvn:org.talend.libraries/metrics-core-3.1.2/6.0.0"/>
@@ -815,7 +819,8 @@
              <library id="gson-2.2.4.jar"/>
              <library id="httpcore-4.3.2.jar"/>
              <library id="httpclient-4.3.4.jar"/>
-             <library id="commons-lang-2.6.jar"/>
+             <!--<library id="commons-lang3-3.3.2.jar"/>--> 
+             <library id="commons-lang-2.6.jar"/> 
              <library id="commons-logging-1.2.jar"/>
              <library id="commons-cli-1.2.jar"/>
              <library id="commons-codec-1.4.jar"/>
@@ -872,8 +877,9 @@
 			 <library id="antlr4-runtime-4.5.3.jar"/>
 			 <library id="aopalliance-1.0.jar"/>
 			 <library id="aopalliance-repackaged-2.4.0-b34.jar"/>
+		-->	
 			 <library id="apache-log4j-extras-1.2.17.jar"/>
-			-->
+			 
 			 <library id="apacheds-i18n-2.0.0-M15.jar"/>
 			 <library id="apacheds-kerberos-codec-2.0.0-M15.jar"/>
 			 <library id="api-asn1-api-1.0.0-M20.jar"/>
@@ -900,7 +906,7 @@
 			 <library id="commons-cli-1.2.jar"/>
 			 <library id="commons-codec-1.10.jar"/> <!-- TBR with 1.4 -->
 			 <library id="commons-collections-3.2.2.jar"/>
-			 <!--<library id="commons-compiler-2.7.6.jar"/> -->
+			 <library id="commons-compiler-2.7.6.jar"/> 
 			 <library id="commons-compress-1.4.1.jar"/>
 			 <library id="commons-configuration-1.6.jar"/>
 			 <!--<library id="commons-dbcp-1.4.jar"/> -->
@@ -909,6 +915,7 @@
 			 <library id="commons-io-2.4.jar"/>
 			 <library id="commons-lang-2.6.jar"/>
 			 <library id="commons-lang3-3.3.2.jar"/>
+			 <!--<library id="commons-lang3-3.4.jar"/> --> <!-- new -->
 			 <library id="commons-logging-1.1.3.jar"/> 
 			 <library id="commons-math3-3.4.1.jar"/>
 			 <library id="commons-net-2.2.jar"/> <!-- TBR with 3.1 -->
@@ -997,8 +1004,9 @@
 			 <!-- -->
 			 <library id="javolution-5.5.1.jar"/>
 			 <library id="jaxb-api-2.2.2.jar"/>
-			<!-- <library id="jcl-over-slf4j-1.7.16.jar"/>
-			 <library id="jdo-api-3.0.1.jar"/>
+			
+			 <library id="jcl-over-slf4j-1.7.16.jar"/>
+			<!-- <library id="jdo-api-3.0.1.jar"/>
 			--> 
 			 <library id="jersey-client-2.22.2.jar"/>
 			 <library id="jersey-common-2.22.2.jar"/>
@@ -1023,8 +1031,9 @@
 			 <library id="jsr305-1.3.9.jar"/>
 			<!-- <library id="jta-1.1.jar"/>
 			 <library id="jtransforms-2.4.0.jar"/>
+			--> 
 			 <library id="jul-to-slf4j-1.7.16.jar"/>
-			-->
+		
 			 <library id="kryo-shaded-3.0.3.jar"/>
 			<!-- <library id="leveldbjni-all-1.8.jar"/>
 			 <library id="libfb303-0.9.2.jar"/>
@@ -1052,7 +1061,7 @@
 			 <library id="osgi-resource-locator-1.0.1.jar"/>
 	     -->
 			 <library id="paranamer-2.3.jar"/>
-		 <!--
+		
 			 <library id="parquet-column-1.7.0.jar"/>
 			 <library id="parquet-common-1.7.0.jar"/>
 			 <library id="parquet-encoding-1.7.0.jar"/>
@@ -1061,6 +1070,7 @@
 			 <library id="parquet-hadoop-1.7.0.jar"/>
 			 <library id="parquet-hadoop-bundle-1.6.0.jar"/>
 			 <library id="parquet-jackson-1.7.0.jar"/>
+		<!--
 			 <library id="pmml-model-1.2.15.jar"/>
 			 <library id="pmml-schema-1.2.15.jar"/>
 		-->	
