--- a/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
@@ -2,6 +2,7 @@
 <?eclipse version="3.2"?>
 <plugin>
     <extension point="org.talend.core.runtime.librariesNeeded">
+    
         <!-- HDFS libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr500"
@@ -15,6 +16,12 @@
             name="hadoop-hdfs-2.7.2-amzn-3.jar" 
             mvn_uri="mvn:org.talend.libraries/hadoop-hdfs-2.7.2-amzn-3/6.3.0"/>
 
+		<libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr500"
+            id="hadoop-archives-emr500-latest"
+            name="hadoop-archives-2.7.2-amzn-3.jar" 
+            mvn_uri="mvn:org.talend.libraries/hadoop-archives-2.7.2-amzn-3/6.3.0"/>
+
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr500"
             id="hadoop-auth-emr500-latest"
@@ -24,7 +31,7 @@
         <libraryNeeded 
         	context="plugin:org.talend.hadoop.distribution.emr500"
         	id="libthrift-0.9.3.jar" name="libthrift-0.9.3.jar" 
-        	mvn_uri="mvn:org.talend.libraries/libthrift-0.9.2/6.3.0"/>    
+        	mvn_uri="mvn:org.talend.libraries/libthrift-0.9.3/6.3.0"/>    
         
         <!-- Map/Reduce libraries -->    
          <libraryNeeded
@@ -103,10 +110,16 @@
         <!-- Hive libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr500"
+            id="hive-exec-2.1.0-talend-nolang3"
+            name="hive-exec-2.1.0-talend-nolang3.jar" 
+            mvn_uri="mvn:org.talend.libraries/hive-exec-2.1.0-talend-nolang3/6.0.0"/>        
+               
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr500"
             id="hive-exec-emr500-latest"
             name="hive-exec-2.1.0-amzn-0.jar" 
             mvn_uri="mvn:org.talend.libraries/hive-exec-2.1.0-amzn-0/6.0.0"/>
-
+             
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr500"
             id="hive-common-emr500-latest"
@@ -130,13 +143,19 @@
             id="hive-jdbc-emr500-latest"
             name="hive-jdbc-2.1.0-amzn-0.jar" 
             mvn_uri="mvn:org.talend.libraries/hive-jdbc-2.1.0-amzn-0/6.0.0"/>
-
-        <libraryNeeded
+            
+          <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr500"
             id="hive-service-emr500-latest"
             name="hive-service-2.1.0-amzn-0.jar" 
-            mvn_uri="mvn:org.talend.libraries/hive-service-2.1.0-amzn-0/6.0.0"/>
+            mvn_uri="mvn:org.talend.libraries/hive-service-2.1.0-amzn-0/6.0.0"/>   
             
+          <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr500"
+            id="hive-service-rpc-emr500-latest"
+            name="hive-service-rpc-2.1.0-amzn-0.jar" 
+            mvn_uri="mvn:org.talend.libraries/hive-service-rpc-2.1.0-amzn-0/6.0.0"/>    
+		    
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr500"
             id="hive-hcatalog-core-emr500-latest"
@@ -262,8 +281,6 @@
             name="sqoop-1.4.6.jar"
             mvn_uri="mvn:org.talend.libraries/sqoop-1.4.6/6.0.0">
         </libraryNeeded>    
-        
-        
                  
         
         <!-- Spark2 libraries -->
@@ -470,7 +487,6 @@
 <libraryNeeded context="plugin:org.talend.hadoop.distribution.emr500" id="jackson-mapper-asl-1.9.13.jar" name="jackson-mapper-asl-1.9.13.jar" mvn_uri="mvn:org.talend.libraries/jackson-mapper-asl-1.9.13/6.0.0"/>
 <libraryNeeded context="plugin:org.talend.hadoop.distribution.emr500" id="mesos-0.21.1-shaded-protobuf.jar" name="mesos-0.21.1-shaded-protobuf.jar" mvn_uri="mvn:org.talend.libraries/mesos-0.21.1-shaded-protobuf/6.0.0"/>
 <libraryNeeded context="plugin:org.talend.hadoop.distribution.emr500" id="parquet-jackson-1.7.0.jar" name="parquet-jackson-1.7.0.jar" mvn_uri="mvn:org.talend.libraries/parquet-jackson-1.7.0/6.0.0"/>    
-            
             
         
         <!-- Kafka libraries -->    
@@ -795,12 +811,14 @@
                 description="The latest Hive libraries for EMR 5.0.0"
                 id="HIVE-LIB-EMR_5_0_0_LATEST"
                 name="HIVE-LIB-EMR_5_0_0_LATEST">
+           
+             <library id="hive-exec-2.1.0-talend-nolang3"/>
              <library id="hive-metastore-emr500-latest"/>
-             <library id="hive-exec-emr500-latest"/>
-             <library id="hive-jdbc-emr500-latest"/>
-             <library id="hive-service-emr500-latest"/>
-             <library id="hive-serde-emr500-latest"/>
-             <library id="jdo-api-3.0.1.jar"/>
+           	 <library id="hive-jdbc-emr500-latest"/>
+		     <library id="hive-service-emr500-latest"/>
+		     <library id="hive-service-rpc-emr500-latest"/>
+		     <library id="hive-serde-emr500-latest"/>
+		     <library id="jdo-api-3.0.1.jar"/>
              <library id="libthrift-0.9.3.jar"/>
              <library id="libfb303-0.9.3.jar"/>
              <library id="guava-14.0.1.jar"/>
@@ -819,8 +837,7 @@
              <library id="gson-2.2.4.jar"/>
              <library id="httpcore-4.3.2.jar"/>
              <library id="httpclient-4.3.4.jar"/>
-             <!--<library id="commons-lang3-3.3.2.jar"/>--> 
-             <library id="commons-lang-2.6.jar"/> 
+             <library id="commons-lang3-3.3.2.jar"/> 
              <library id="commons-logging-1.2.jar"/>
              <library id="commons-cli-1.2.jar"/>
              <library id="commons-codec-1.4.jar"/>
@@ -872,7 +889,7 @@
              <library id="aws-java-sdk-s3-1.10.75.jar"/>
              <library id="aws-java-sdk-core-1.10.75.jar"/>              
              <library id="activation-1.1.1.jar"/>
-			- <library id="antlr-2.7.7.jar"/>
+			 <library id="antlr-2.7.7.jar"/>
 			 <library id="antlr-runtime-3.4.jar"/>
 			 <library id="antlr4-runtime-4.5.3.jar"/>
 			 <library id="aopalliance-1.0.jar"/>
@@ -915,7 +932,6 @@
 			 <library id="commons-io-2.4.jar"/>
 			 <library id="commons-lang-2.6.jar"/>
 			 <library id="commons-lang3-3.3.2.jar"/>
-			 <!--<library id="commons-lang3-3.4.jar"/> --> <!-- new -->
 			 <library id="commons-logging-1.1.3.jar"/> 
 			 <library id="commons-math3-3.4.1.jar"/>
 			 <library id="commons-net-2.2.jar"/> <!-- TBR with 3.1 -->
@@ -929,18 +945,18 @@
 			 <library id="datanucleus-api-jdo-3.2.6.jar"/>
 			 <library id="datanucleus-core-3.2.10.jar"/>
 			 <library id="datanucleus-rdbms-3.2.9.jar"/>
-			<!--
 			 <library id="derby-10.11.1.1.jar"/>
+			<!--
 			 <library id="eigenbase-properties-1.1.5.jar"/>
 			-->
 			 <library id="gson-2.2.4.jar"/>
-			 <library id="guava-11.0.2.jar"/> <!-- replacing -->
-			 <!--<library id="guava-14.0.1.jar"/> replace -->
+			 <!--<library id="guava-11.0.2.jar"/> --> <!-- replacing -->
+			 <library id="guava-14.0.1.jar"/> <!--replace -->
 			 <!--<library id="guice-3.0.jar"/>
 			 <library id="guice-servlet-3.0.jar"/>
 			-->
 			 <library id="hadoop-annotations-2.7.2-amzn-3.jar"/>
-			  <library id="hadoop-ant-2.7.2-amzn-3.jar"/> 
+			 <library id="hadoop-ant-2.7.2-amzn-3.jar"/> 
 			 <library id="hadoop-auth-emr500-latest"/>
 			 <library id="hadoop-archives-emr500-latest"/>
 			 <library id="hadoop-aws-emr500-latest"/>
@@ -957,13 +973,14 @@
 			 <library id="hadoop-yarn-common-emr500-latest"/>
 			 <library id="hadoop-yarn-server-common-2.7.2-amzn-3.jar"/>
 			 <library id="hadoop-yarn-server-web-proxy-2.7.2-amzn-3.jar"/>
-	     		 
+  		 
 			 <library id="hive-beeline-1.2.1.spark2.jar"/>
 			 <library id="hive-cli-1.2.1.spark2.jar"/>
 			 <library id="hive-exec-1.2.1.spark2.jar"/>
 			 <library id="hive-jdbc-1.2.1.spark2.jar"/>
 			 <library id="hive-metastore-1.2.1.spark2.jar"/>
-		<!--
+			 
+		     <!--
 			 <library id="hk2-api-2.4.0-b34.jar"/>
 			 <library id="hk2-locator-2.4.0-b34.jar"/>
 			 <library id="hk2-utils-2.4.0-b34.jar"/>
@@ -971,20 +988,12 @@
 			 
 			<!--  <library id="hive-common-emr500-latest"/> -->
 			 
-			 <library id="htrace-core-3.1.0-incubating.jar"/> <!--replacing -->
-         	 <!--<library id="htrace-core-3.0.4.jar"/> replaced--> 
-			 <library id="httpclient-4.5.2.jar"/>
+			 <library id="htrace-core-3.1.0-incubating.jar"/> 
+    		 <library id="httpclient-4.5.2.jar"/>
 			 <library id="httpcore-4.4.4.jar"/>
 			 <!--<library id="ivy-2.4.0.jar"/> -->
 			 <library id="jackson-annotations-2.6.5.jar"/>
 			 <library id="jackson-core-2.6.5.jar"/>
-			 <!---->
-			 <!--<library id="jackson-core-asl-1.9.13.jar"/>
-			 <library id="jackson-jaxrs-1.9.13.jar"/>
-			 <library id="jackson-mapper-asl-1.9.13.jar"/>
-			 <library id="jackson-xc-1.9.13.jar"/>
-			 -->
-			 <!--<library id="jackson-core-2.3.1.jar"/>-->
 			 <library id="jackson-core-asl-2.6.5.jar"/>
 			 <library id="jackson-jaxrs-2.6.5.jar"/>
 			 <library id="jackson-mapper-asl-2.6.5.jar"/>
@@ -994,7 +1003,7 @@
 			 <library id="jackson-module-paranamer-2.6.5.jar"/> 
 			 <library id="jackson-module-scala_2.11-2.6.5.jar"/>
 			 <library id="janino-2.7.8.jar"/>
-			 <library id="java-xmlbuilder-1.0.jar"/> <!-- to replace 0.4 -->
+			 <library id="java-xmlbuilder-1.0.jar"/> 
 			 <!--<library id="JavaEWAH-0.3.2.jar"/> -->
 			 <library id="javassist-3.18.1-GA.jar"/>
 			 <library id="javax.annotation-api-1.2.jar"/>
@@ -1009,24 +1018,22 @@
 			 <library id="jaxb-api-2.2.2.jar"/>
 			
 			 <library id="jcl-over-slf4j-1.7.16.jar"/>
-			<!-- <library id="jdo-api-3.0.1.jar"/>
-			--> 
+			 <library id="jdo-api-3.0.1.jar"/>
 			 <library id="jersey-client-2.22.2.jar"/>
 			 <library id="jersey-common-2.22.2.jar"/>
 			 <library id="jersey-container-servlet-2.22.2.jar"/>
 			 <library id="jersey-container-servlet-core-2.22.2.jar"/>
 			 <library id="jersey-guava-2.22.2.jar"/>
 			 <library id="jersey-media-jaxb-2.22.2.jar"/>
-			 <!-- -->
 			 <library id="jersey-server-2.22.2.jar"/>
 			 <library id="jets3t-0.9.3.jar"/>
 			 <library id="jetty-6.1.26.jar"/>
 			 <library id="jetty-util-6.1.26.jar"/>
-			<!-- <library id="jline-2.12.jar"/>
+			 <library id="jline-2.12.jar"/>
 			 <library id="joda-time-2.9.3.jar"/>
 			 <library id="jodd-core-3.5.2.jar"/>
 			 <library id="jpam-1.1.jar"/>
-			-->
+			
 			 <library id="json-20090211.jar"/>
 			 <library id="json4s-ast_2.11-3.2.11.jar"/>
 			 <library id="json4s-core_2.11-3.2.11.jar"/>
@@ -1038,10 +1045,10 @@
 			 <library id="jul-to-slf4j-1.7.16.jar"/>
 		
 			 <library id="kryo-shaded-3.0.3.jar"/>
-			<!-- <library id="leveldbjni-all-1.8.jar"/>
+			 <library id="leveldbjni-all-1.8.jar"/>
 			 <library id="libfb303-0.9.2.jar"/>
 			 <library id="libthrift-0.9.2.jar"/>
-			--> 
+			 
 			 <library id="log4j-1.2.17.jar"/>
 			<library id="lz4-1.3.0.jar"/>
 			<!-- <library id="mail-1.4.7.jar"/>
@@ -1064,7 +1071,6 @@
 			 <library id="osgi-resource-locator-1.0.1.jar"/>
 	     -->
 			 <library id="paranamer-2.3.jar"/>
-		
 			 <library id="parquet-column-1.7.0.jar"/>
 			 <library id="parquet-common-1.7.0.jar"/>
 			 <library id="parquet-encoding-1.7.0.jar"/>
@@ -1089,7 +1095,6 @@
 			 <library id="scalap-2.11.8.jar"/>	
 			 <library id="slf4j-api-1.7.16.jar"/>
 			 <library id="slf4j-log4j12-1.7.16.jar"/>
-			 <!--<library id="snappy-0.2.jar"/>-->
 			 <library id="snappy-java-1.1.2.4.jar"/>
 			 <library id="spark-catalyst_2.11-2.0.0.jar"/>
 			 <library id="spark-core_2.11-2.0.0.jar"/>
@@ -1115,7 +1120,6 @@
 		-->
 			 <library id="stax-api-1.0-2.jar"/>
 		<!--
-			 <library id="stax-api-1.0.1.jar"/>
 			 <library id="stream-2.7.0.jar"/>
 			 <library id="stringtemplate-3.2.1.jar"/>
 		-->	 
@@ -1126,7 +1130,6 @@
 		-->	 
 			 <library id="xbean-asm5-shaded-4.4.jar"/>
 			 <library id="xercesImpl-2.9.1.jar"/>
-		
 			 <library id="xmlenc-0.52.jar"/> 
 			 <library id="xz-1.0.jar"/>
 			 <library id="zookeeper-3.4.6.jar"/>
@@ -1157,6 +1160,7 @@
                 id="SPARK-HIVE-LIB-MRREQUIRED-EMR_5_0_0_LATEST"
                 name="SPARK-HIVE-LIB-MRREQUIRED-EMR_5_0_0_LATEST">
             <library id="hive-exec-emr500-latest"/>
+            <library id="hive-exec-1.2.1.spark2.jar"/>
             <library id="hive-metastore-emr500-latest"/>
             <library id="libfb303-0.9.2.jar"/>            
         </libraryNeededGroup>
@@ -1245,7 +1249,7 @@
       <!-- EMR 5.0.0 ClassLoaders -->
       <classloader
             index="HIVE2:AMAZON_EMR:EMR_5_0_0:STANDALONE"
-            libraries="antlr-runtime-3.4.jar;avro-1.7.7.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-httpclient-3.0.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-4.2.1.jar;datanucleus-core-4.1.6.jar;datanucleus-rdbms-4.1.7.jar;derby-10.11.1.1.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-14.0.1.jar;hadoop-auth-2.7.2-amzn-3.jar;hadoop-common-2.7.2-amzn-3.jar;hadoop-hdfs-2.7.2-amzn-3.jar;hadoop-mapreduce-client-common-2.7.2-amzn-3.jar;hadoop-mapreduce-client-core-2.7.2-amzn-3.jar;hadoop-mapreduce-client-jobclient-2.7.2-amzn-3.jar;hadoop-yarn-api-2.7.2-amzn-3.jar;hadoop-yarn-client-2.7.2-amzn-3.jar;hadoop-yarn-common-2.7.2-amzn-3.jar;hive-exec-2.1.0-amzn-0.jar;hive-jdbc-2.1.0-amzn-0.jar;hive-metastore-2.1.0-amzn-0.jar;hive-serde-2.1.0-amzn-0.jar;hive-service-2.1.0-amzn-0.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jdo-api-3.0.1.jar;libfb303-0.9.3.jar;libthrift-0.9.3.jar;log4j-1.2.17.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;zookeeper-3.4.8.jar">
+            libraries="antlr-runtime-3.4.jar;avro-1.7.7.jar;commons-cli-1.2.jar;commons-codec-1.4.jar;commons-collections-3.2.2.jar;commons-configuration-1.6.jar;commons-httpclient-3.0.1.jar;commons-io-2.4.jar;commons-lang-2.6.jar;commons-logging-1.2.jar;curator-client-2.6.0.jar;curator-framework-2.6.0.jar;datanucleus-api-jdo-4.2.1.jar;datanucleus-core-4.1.6.jar;datanucleus-rdbms-4.1.7.jar;derby-10.11.1.1.jar;emr-metrics-client-2.1.0.jar;gson-2.2.4.jar;guava-14.0.1.jar;hadoop-auth-2.7.2-amzn-3.jar;hadoop-common-2.7.2-amzn-3.jar;hadoop-hdfs-2.7.2-amzn-3.jar;hadoop-mapreduce-client-common-2.7.2-amzn-3.jar;hadoop-mapreduce-client-core-2.7.2-amzn-3.jar;hadoop-mapreduce-client-jobclient-2.7.2-amzn-3.jar;hadoop-yarn-api-2.7.2-amzn-3.jar;hadoop-yarn-client-2.7.2-amzn-3.jar;hadoop-yarn-common-2.7.2-amzn-3.jar;hive-exec-2.1.0-talend-nolang3.jar;hive-jdbc-2.1.0-amzn-0.jar;hive-metastore-2.1.0-amzn-0.jar;hive-serde-2.1.0-amzn-0.jar;hive-service-2.1.0-amzn-0.jar;htrace-core-3.1.0-incubating.jar;httpclient-4.3.4.jar;httpcore-4.3.2.jar;jdo-api-3.0.1.jar;libfb303-0.9.3.jar;libthrift-0.9.3.jar;log4j-1.2.17.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;zookeeper-3.4.8.jar">
       </classloader>
       <classloader
             index="MAP_REDUCE:AMAZON_EMR:EMR_5_0_0"
