--- a/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
@@ -241,7 +241,15 @@
             id="sqoop-cdh5.8.1"
             name="sqoop-1.4.6-cdh5.8.1.jar"
             mvn_uri="mvn:org.talend.libraries/sqoop-1.4.6-cdh5.8.1/6.1.0">
-        </libraryNeeded>  
+        </libraryNeeded>
+        
+        <!-- GraphFrames libraries -->
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh580"
+            id="graphframes-0.2.0-spark1.6-s_2.10.jar"
+            name="graphframes-0.2.0-spark1.6-s_2.10.jar"
+            mvn_uri="mvn:org.talend.libraries/graphframes-0.2.0-spark1.6-s_2.10/6.0.0">
+        </libraryNeeded>
         
         <!-- Third parties libraries -->
         <libraryNeeded
@@ -794,6 +802,14 @@
              <library id="jets3t-0.9.0" />
              <library id="httpclient-4.2.5.jar" />
              <library id="httpcore-4.2.5.jar" />
+        </libraryNeededGroup>
+        
+        <!-- GraphFrames group MRREQUIRED -->
+        <libraryNeededGroup
+                description="GraphFrames libraries for CDH 5.8 that are MRREQUIRED"
+                id="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-CDH_5_8"
+                name="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-CDH_5_8">
+             <library id="graphframes-0.2.0-spark1.6-s_2.10.jar" />
         </libraryNeededGroup>
         
         <!-- Spark Hive group MRREQUIRED -->
