--- a/main/plugins/org.talend.hadoop.distribution.emr400/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr400/plugin.xml
@@ -4,24 +4,10 @@
     <extension point="org.talend.core.runtime.librariesNeeded">
     	<!-- GraphFrames libraries -->
 		<libraryNeeded 
-			context="plugin:org.talend.hadoop.distribution.cdh570"
+			context="plugin:org.talend.hadoop.distribution.emr400"
 			id="graphframes-0.2.0-spark1.4-s_2.10.jar" 
 			name="graphframes-0.2.0-spark1.4-s_2.10.jar"
 			mvn_uri="mvn:org.talend.libraries/graphframes-0.2.0-spark1.4-s_2.10/6.0.0">
-		</libraryNeeded>
-		
-		<libraryNeeded 
-			context="plugin:org.talend.hadoop.distribution.cdh570"
-			id="scala-logging-slf4j_2.10-2.1.2.jar" 
-			name="scala-logging-slf4j_2.10-2.1.2.jar"
-			mvn_uri="mvn:org.talend.libraries/scala-logging-slf4j_2.10-2.1.2/6.0.0">
-		</libraryNeeded>
-		
-		<libraryNeeded 
-			context="plugin:org.talend.hadoop.distribution.cdh570"
-			id="scala-logging-api_2.10-2.1.2.jar" 
-			name="scala-logging-api_2.10-2.1.2.jar"
-			mvn_uri="mvn:org.talend.libraries/scala-logging-api_2.10-2.1.2/6.0.0">
 		</libraryNeeded>
         <!-- group of spark libraries -->
         <libraryNeededGroup
@@ -103,8 +89,6 @@
 			description="GraphFrames libraries for EMR 4.0.0 that are MRREQUIRED" 
 			id="GRAPHFRAMES-LIB-EMR_4_0_0_LATEST"
 			name="GRAPHFRAMES-LIB-EMR_4_0_0_LATEST">
-			<library id="scala-logging-slf4j_2.10-2.1.2.jar" />
-			<library id="scala-logging-api_2.10-2.1.2.jar" />
 			<library id="graphframes-0.2.0-spark1.4-s_2.10.jar" />
 		</libraryNeededGroup>
     </extension>
