--- a/main/plugins/org.talend.hadoop.distribution.emr450/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr450/plugin.xml
@@ -292,6 +292,14 @@
             name="spark-streaming-flume-assembly_2.10-1.6.1.jar"
             mvn_uri="mvn:org.talend.libraries/spark-streaming-flume-assembly_2.10-1.6.1/6.2.0">
         </libraryNeeded>
+        
+        <!-- GraphFrames libraries -->
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.emr450"
+            id="graphframes-0.2.0-spark1.6-s_2.10.jar"
+            name="graphframes-0.2.0-spark1.6-s_2.10.jar"
+            mvn_uri="mvn:org.talend.libraries/graphframes-0.2.0-spark1.6-s_2.10/6.0.0">
+        </libraryNeeded>
             
         <!-- Third parties libraries -->   
         <libraryNeeded
@@ -377,8 +385,6 @@
                 description="GraphFrames libraries for EMR 4.5.0 that are MRREQUIRED"
                 id="GRAPHFRAMES-LIB-EMR_4_5_0_LATEST"
                 name="GRAPHFRAMES-LIB-EMR_4_5_0_LATEST">
-             <library id="scala-logging-slf4j_2.10-2.1.2.jar"/>
-             <library id="scala-logging-api_2.10-2.1.2.jar"/>
              <library id="graphframes-0.2.0-spark1.6-s_2.10.jar" />
         </libraryNeededGroup>
         
