--- a/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
@@ -281,6 +281,14 @@
             mvn_uri="mvn:org.talend.libraries/spark-streaming-kinesis-asl-assembly_2.10-1.6.2/6.3.0">
         </libraryNeeded>
         
+        <!-- GraphFrames libraries -->
+		<libraryNeeded 
+			context="plugin:org.talend.hadoop.distribution.hdp250"
+			id="graphframes-0.2.0-spark1.6-s_2.10.jar" 
+			name="graphframes-0.2.0-spark1.6-s_2.10.jar"
+			mvn_uri="mvn:org.talend.libraries/graphframes-0.2.0-spark1.6-s_2.10/6.0.0">
+		</libraryNeeded>
+        
         <!-- Third parties libraries -->
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdp250"
@@ -981,6 +989,14 @@
              <library id="jodd-core-3.5.2.jar" />    
              <library id="snappy-java-1.0.4.1.jar" />         
         </libraryNeededGroup>
+        
+        <!-- GraphFrames group MRREQUIRED -->
+		<libraryNeededGroup
+			description="GraphFrames libraries for HDP 2.5 that are MRREQUIRED" 
+			id="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-HDP_2_5"
+			name="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-HDP_2_5">
+			<library id="graphframes-0.2.0-spark1.6-s_2.10.jar" />
+		</libraryNeededGroup>
         
         <!-- Spark Hive group MRREQUIRED -->
         <libraryNeededGroup
