--- a/main/plugins/org.talend.hadoop.distribution.mapr520/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.mapr520/plugin.xml
@@ -383,6 +383,14 @@
             name="antlr4-runtime-4.5.jar"
             mvn_uri="mvn:org.talend.libraries/antlr4-runtime-4.5/6.3.0" >
         </libraryNeeded>
+        
+        <!-- GraphFrames libraries -->
+		<libraryNeeded 
+			context="plugin:org.talend.libraries.hadoop.mapr.5.2.0"
+			id="graphframes-0.2.0-spark1.6-s_2.10.jar" 
+			name="graphframes-0.2.0-spark1.6-s_2.10.jar"
+			mvn_uri="mvn:org.talend.libraries/graphframes-0.2.0-spark1.6-s_2.10/6.0.0">
+		</libraryNeeded>
 
         <libraryNeededGroup
                 description="S3 libraries for MapR 5.2.0"
@@ -774,6 +782,14 @@
                 name="SPARK-MAPRSTREAMS-CLIENT-LIB-MRREQUIRED-MAPR520">
             <library id="mapr-streams-5.2.0-mapr.jar"/>
         </libraryNeededGroup>
+        
+ 		<!-- GraphFrames group MRREQUIRED -->
+		<libraryNeededGroup
+			description="GraphFrames libraries for MapR 5.2.0 that are MRREQUIRED" 
+			id="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-MAPR520"
+			name="SPARK-GRAPHFRAMES-LIB-MRREQUIRED-MAPR520">
+			<library id="graphframes-0.2.0-spark1.6-s_2.10.jar" />
+		</libraryNeededGroup>
         
     </extension>
     <extension
