Revert "[TBD-3825] Disambiguate spark-streaming-kafka-0.10-assembly_2.11-2.0.0 between local mode and EMR 5.0.0"
This reverts commit 3d017d1150869dd9383e3c6ace34fbcce5b4747f.

--- a/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.emr500/plugin.xml
@@ -493,8 +493,8 @@
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.emr500"
             id="spark-streaming-kafka-emr500-latest"
-            name="spark-streaming-kafka-0-10-assembly_2.11-2.0.0-emr500.jar"
-            mvn_uri="mvn:org.talend.libraries/spark-streaming-kafka-0-10-assembly_2.11-2.0.0-emr500/6.0.0">
+            name="spark-streaming-kafka-0-10-assembly_2.11-2.0.0.jar"
+            mvn_uri="mvn:org.talend.libraries/spark-streaming-kafka-0-10-assembly_2.11-2.0.0/6.0.0">
         </libraryNeeded>
         
         <!-- Kinesis libraries -->
