--- a/main/plugins/org.talend.hadoop.distribution.cdh540/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh540/plugin.xml
@@ -4,6 +4,51 @@
     <extension point="org.talend.core.runtime.librariesNeeded">
         
         <!-- group of hdfs libraries -->
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh540"
+            id="hadoop-aws-2.6.0-cdh5.4.0.jar"
+            name="hadoop-aws-2.6.0-cdh5.4.0.jar"
+            mvn_uri="mvn:org.talend.libraries/hadoop-aws-2.6.0-cdh5.4.0/6.0.0">
+        </libraryNeeded>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh450"
+            id="aws-java-sdk-1.9.16.jar"
+            name="aws-java-sdk-1.9.16.jar"
+            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-1.9.16/6.0.0">
+        </libraryNeeded>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh540"
+            id="jets3t-0.9.0.jar"
+            name="jets3t-0.9.0.jar"
+            mvn_uri="mvn:org.talend.libraries/jets3t-0.9.0/6.0.0">
+        </libraryNeeded>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh540"
+            id="httpclient-4.2.5.jar"
+            name="httpclient-4.2.5.jar"
+            mvn_uri="mvn:org.talend.libraries/httpclient-4.2.5/6.0.0">
+        </libraryNeeded>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh540"
+            id="httpcore-4.2.5.jar"
+            name="httpcore-4.2.5.jar"
+            mvn_uri="mvn:org.talend.libraries/httpcore-4.2.5/6.0.0">
+        </libraryNeeded>
+
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh540"
+            id="guava-11.0.2.jar"
+            name="guava-11.0.2.jar"
+            mvn_uri="mvn:org.talend.libraries/guava-11.0.2/6.0.0">
+        </libraryNeeded>
+
+
+       <!-- group of hdfs libraries -->
         <libraryNeededGroup
                 description="The lastest HDFS libraries of CDH 5.4"
                 id="HDFS-LIB-CDH_5_4_LASTEST"
@@ -58,5 +103,18 @@
              </library>
         </libraryNeededGroup>
         
+
+        <libraryNeededGroup
+                description="The lastest S3 libraries of CDH 5.4"
+                id="SPARK-S3-LIB-MRREQUIRED-CDH_5_4"
+                name="SPARK-S3-LIB-MRREQUIRED-CDH_5_4"  >
+             <library id="hadoop-aws-2.6.0-cdh5.4.0.jar" />
+             <library id="aws-java-sdk-1.9.16.jar" />
+             <library id="jets3t-0.9.0.jar" />
+             <library id="httpclient-4.2.5.jar" />
+             <library id="httpcore-4.2.5.jar" />
+             <library id="guava-11.0.2.jar" />
+            
+        </libraryNeededGroup>
     </extension>
 </plugin>
