TDI-37704: add unit(minutes) for session duration field(assume role feature) (#158)

--- a/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBInput/tDynamoDBInput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tDynamoDBInput/tDynamoDBInput_messages.properties
@@ -109,7 +109,7 @@ INHERIT_CREDENTIALS.NAME=Inherit credentials from AWS role
 ASSUME_ROLE.NAME=Assume role
 ARN.NAME=Role ARN
 ROLE_SESSION_NAME.NAME=Role session name
-SESSION_DURATION.NAME=Session duration
+SESSION_DURATION.NAME=Session duration(minutes)
 
 SET_STS_ENDPOINT.NAME=STS Endpoint
 STS_ENDPOINT.NAME=
