TBD-4140 fixed - Upgrade the aws-java-sdk

--- a/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
@@ -856,7 +856,9 @@
                 id="SPARK-S3-LIB-MRREQUIRED-HDP_2_4"
                 name="SPARK-S3-LIB-MRREQUIRED-HDP_2_4">
              <library id="hadoop-aws-HDP_2_4"/>
-             <library id="aws-java-sdk-1.7.4.jar"/>
+             <library id="aws-java-sdk-1.9.16"/>
+             <library id="aws-java-sdk-s3-1.9.16"/>
+             <library id="aws-java-sdk-core-1.9.16"/>
              <library id="jets3t-0.9.0" />
              <library id="httpclient-4.2.5.jar" />
              <library id="httpcore-4.2.5.jar" />
