--- a/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
@@ -385,6 +385,13 @@
                 
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh550"
+            id="aws-java-sdk-1.10.52.jar"
+            name="aws-java-sdk-1.10.52.jar"
+            mvn_uri="mvn:org.talend.libraries/aws-java-sdk-1.10.52/6.0.0">
+        </libraryNeeded> 
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.cdh550"
             id="aws-java-sdk-1.9.16.jar"
             name="aws-java-sdk-1.9.16.jar"
             mvn_uri="mvn:org.talend.libraries/aws-java-sdk-1.9.16/6.0.0">
@@ -789,6 +796,18 @@
              <library id="jets3t-0.9.0" />
              <library id="httpclient-4.2.5.jar" />
              <library id="httpcore-4.2.5.jar" />
+        </libraryNeededGroup>
+        
+        <!-- Pig S3 group -->
+        <libraryNeededGroup
+                description="Pig S3 libraries for CDH 5.5"
+                id="PIG-S3-LIB-CDH_5_5"
+                name="PIG-S3-LIB-CDH_5_5">
+             <library id="hadoop-aws-cdh5.5.2"/>
+             <library id="aws-java-sdk-1.10.52.jar"/>
+             <library id="jets3t-0.9.0" />
+             <library id="httpclient-4.3.3.jar" />
+             <library id="httpcore-4.3.3.jar" />
         </libraryNeededGroup>
         
         <!-- Spark Hive group MRREQUIRED -->
