--- a/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp240/plugin.xml
@@ -534,7 +534,7 @@
             <library id="jersey-core-1.9.jar"/>
             <library id="jersey-client-1.9.jar"/>
             <library id="jline-1.0.jar"/>
-            <library id="joda-time-2.5.jar"/>
+            <library id="joda-time-2.8.1.jar"/>
             <library id="log4j-1.2.17.jar"/>
             <library id="pig-HDP_2_4"/>
             <library id="protobuf-java-2.5.0.jar"/>
@@ -863,6 +863,18 @@
              <library id="httpclient-4.2.5.jar" />
              <library id="httpcore-4.2.5.jar" />
         </libraryNeededGroup>
+
+        <!-- Pig S3 group MRREQUIRED -->
+        <libraryNeededGroup
+                description="Pig S3 libraries for HDP 2.4"
+                id="PIG-S3-LIB-HDP_2_4"
+                name="PIG-S3-LIB-HDP_2_4">
+             <library id="hadoop-aws-HDP_2_4"/>
+             <library id="aws-java-sdk-1.10.52"/>
+             <library id="jets3t-0.9.0" />
+             <library id="httpclient-4.3.3.jar" />
+             <library id="httpcore-4.3.3.jar" />
+        </libraryNeededGroup>        
         
         <!-- Spark Parquet group MRREQUIRED -->
         <libraryNeededGroup
