TBD-4271 fixed - Remove joda-time from the pig shade jar and force the use of joda 2.8.1

--- a/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
@@ -549,8 +549,8 @@
              <library id="jersey-core-1.9.jar" />
              <library id="htrace-core4-4.0.1-incubating.jar" />
              <library id="servlet-api-2.5.jar"/>
-             <library id="httpclient-4.2.5.jar"/>
-             <library id="httpcore-4.2.5.jar"/>
+             <library id="httpclient-4.3.3.jar"/>
+             <library id="httpcore-4.3.3.jar"/>
              <library id="jackson-mapper-asl-1.8.8.jar" />
              <library id="jackson-core-asl-1.8.8.jar" />
         </libraryNeededGroup>
@@ -802,6 +802,18 @@
              <library id="jets3t-0.9.0" />
              <library id="httpclient-4.2.5.jar" />
              <library id="httpcore-4.2.5.jar" />
+        </libraryNeededGroup>
+        
+        <!-- Pig S3 group -->
+        <libraryNeededGroup
+                description="Pig S3 libraries for CDH 5.8"
+                id="PIG-S3-LIB-CDH_5_8"
+                name="PIG-S3-LIB-CDH_5_8">
+             <library id="hadoop-aws-cdh5.8.1"/>
+             <library id="aws-java-sdk-1.10.52.jar"/>
+             <library id="jets3t-0.9.0" />
+             <library id="httpclient-4.3.3.jar" />
+             <library id="httpcore-4.3.3.jar" />
         </libraryNeededGroup>
         
         <!-- GraphFrames group MRREQUIRED -->
