--- a/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
@@ -979,6 +979,18 @@
              <library id="httpcore-4.2.5.jar" />
         </libraryNeededGroup>
         
+        <!-- Pig S3 group -->
+        <libraryNeededGroup
+                description="Pig S3 libraries for HDP 2.5"
+                id="PIG-S3-LIB-HDP_2_5"
+                name="PIG-S3-LIB-HDP_2_5">
+             <library id="hadoop-aws-HDP_2_5"/>
+             <library id="aws-java-sdk-1.10.52.jar"/>
+             <library id="jets3t-0.9.0" />
+             <library id="httpclient-4.3.3.jar" />
+             <library id="httpcore-4.3.3.jar" />
+        </libraryNeededGroup>        
+        
         <!-- Spark Parquet group MRREQUIRED -->
         <libraryNeededGroup
                 description="Spark libraries for HDP 2.5 that are MRREQUIRED"
