[TBD-3807] : Multi Atlas version support

--- a/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
@@ -1076,14 +1076,14 @@
         </libraryNeededGroup>
         
         <!-- group of atlas libraries -->
-        <!-- TODO(bchen) do it later -->
-        <!--libraryNeededGroup
+        <libraryNeededGroup
                 description="Atlas lineage API"
                 id="ATLAS_HDP_2_5"
                 name="ATLAS_HDP_2_5"  >
-             <library id="talend-lineage-api-0.1.0" />
-             <library id="atlas-client-0.5-incubating" />
-             <library id="atlas-typesystem-0.5-incubating" />
+             <library id="talend-lineage-api-0.1.1" />
+             <library id="atlas-client-0.7-incubating" />
+             <library id="atlas-typesystem-0.7-incubating" />
+             <library id="atlas-common-0.7-incubating" />
              <library id="json4s-native_2.10-3.2.11" />
              <library id="json4s-core_2.10-3.2.11" />
              <library id="json4s-ast_2.10-3.2.11" />
@@ -1100,19 +1100,27 @@
              <library id="nscala-time_2.10-1.6.0" />
              <library id="joda-convert-1.2" />
              <library id="config-1.2.1" />
-             <library id="gson-2.3.1" />
+             <library id="gson-2.5" />
              <library id="fastutil-6.5.16" />
              <library id="guice-4.0" />
              <library id="javax.inject-1.jar" />
              <library id="commons-lang3-3.4" />
+             <library id="spring-beans-3.1.3.RELEASE" />
+             <library id="spring-core-3.1.3.RELEASE" />
+             <library id="spring-asm-3.1.3.RELEASE" />
              <library id="hadoop-common-HDP_2_5" />
              <library id="hadoop-annotations-HDP_2_5" />
              <library id="jersey-client-1.9.jar" />
-             <library id="paranamer-2.3.jar"/>
-             <library id="commons-configuration-1.6.jar"/>
              <library id="slf4j-api-1.7.10.jar"/>
              <library id="slf4j-log4j12-1.7.10.jar"/>
-        </libraryNeededGroup-->
+             <library id="slf4j-log4j12-1.7.10.jar"/> 
+             <library id="httpclient-4.5.2.jar"/>
+             <library id="httpcore-4.4.4.jar"/>
+             <library id="commons-logging-1.2.jar"/>
+             <library id="commons-codec-1.9.jar"/>
+             <library id="paranamer-2.3.jar"/>
+             <library id="atlas-properties-0.1.1-0.7-0.0.1.jar"/>
+        </libraryNeededGroup>
         
         <!-- Sqoop Parquet group -->
         <libraryNeededGroup
