--- a/main/components_lib/talend-lineage-api/pom.xml
+++ b/main/components_lib/talend-lineage-api/pom.xml
@@ -12,7 +12,7 @@
 
 	<artifactId>talend-lineage-api</artifactId>
 	<packaging>jar</packaging>
-	<version>0.1.0</version>
+	<version>0.1.1</version>
 
 	<name>talend-lineage-api</name>
 	<description>Talend BigData lineage API</description>
@@ -53,11 +53,11 @@
 			<version>${atlas.version}</version>
 		</dependency>
 		
-		<dependency>
-		    <groupId>joda-time</groupId>
-		    <artifactId>joda-time</artifactId>
-		    <version>2.4</version>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 		    <groupId>joda-time</groupId> -->
+<!-- 		    <artifactId>joda-time</artifactId> -->
+<!-- 		    <version>2.4</version> -->
+<!-- 		</dependency> -->
 		
                <!--  CLOUDERA NAVIGATOR INTEGRATION TESTS ONLY
                <dependency>
