[TBD-4146] Add batch insertion to Hbase Output.

--- a/main/plugins/org.talend.designer.components.bigdata/components/tMapRDBOutput/tMapRDBOutput_messages.properties
+++ b/main/plugins/org.talend.designer.components.bigdata/components/tMapRDBOutput/tMapRDBOutput_messages.properties
@@ -102,3 +102,6 @@ SET_MAPR_HOME_DIR.NAME=Set the MapR home directory
 MAPR_HOME_DIR.NAME=
 SET_HADOOP_LOGIN.NAME=Specify the hadoop login configuration
 HADOOP_LOGIN.NAME=
+
+USE_BATCH_MODE.NAME=Use batch mode
+BATCH_SIZE.NAME=batch size
