Upgrade jackson in the CDH 5.8 to support the tDataprepRun

--- a/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp250/plugin.xml
@@ -455,6 +455,13 @@
             name="jackson-databind-2.3.1.jar"
             mvn_uri="mvn:org.talend.libraries/jackson-databind-2.3.1/6.3.0">
         </libraryNeeded>
+        
+        <libraryNeeded
+            context="plugin:org.talend.hadoop.distribution.hdp250"
+            id="jackson-annotations-2.3.0"
+            name="jackson-annotations-2.3.0.jar"
+            mvn_uri="mvn:org.talend.libraries/jackson-annotations-2.3.0/6.3.0">
+        </libraryNeeded>        
 
 		<libraryNeeded
             context="plugin:org.talend.hadoop.distribution.hdp250"
